test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_loop_decl_init_any.plx
pub fn main(none) i32 {
    loop i: any = 10 while 1 .. i = i + 1 {
        return 1
    }
    return 0
}
